✅INSERT DATA TEST PASSED

--- a/config/bwSettings_sample.json
+++ b/config/bwSettings_sample.json
@@ -1,7 +1,7 @@
 {
     "basic":{
         "database":{
-            "server":"tcp://xxx.xx:3306",
+            "server":"tcp://xxx.xx:3306/dbname",
             "username":"your username",
             "password":"your password",
             "reconnect":5
@@ -9,5 +9,3 @@
         "timegap":10
     }
 }
-
-/* please rename this file to "bwSettings.json" */
